--- a/x86_64/.config
+++ b/x86_64/.config
@@ -25,6 +25,13 @@ CONFIG_PACKAGE_kmod-usb2=y
 CONFIG_PACKAGE_kmod-usb2-pci=y
 CONFIG_PACKAGE_kmod-usb3=y
 
+# Virtualization
+#
+# CONFIG_PACKAGE_kmod-kvm-amd is not set
+CONFIG_PACKAGE_kmod-kvm-intel=y
+CONFIG_PACKAGE_kmod-kvm-x86=y
+# end of Virtualization
+
 # Applications
 CONFIG_PACKAGE_luci-app-accesscontrol=n
 CONFIG_PACKAGE_luci-app-acme=n
@@ -201,6 +208,9 @@ CONFIG_PACKAGE_luci-theme-openwrt=n
 CONFIG_PACKAGE_luci-theme-rosy=n
 
 # 其他需要安装的软件包:
+CONFIG_PACKAGE_qemu-bridge-helper=y
+CONFIG_PACKAGE_qemu-x86_64-softmmu=y
+CONFIG_PACKAGE_qemu-img=y
 CONFIG_PACKAGE_luci-ssl-nginx=y
 CONFIG_NGINX_HTTP_V2=y
 CONFIG_NGINX_DAV=y
@@ -266,4 +276,4 @@ CONFIG_PACKAGE_kmod-macvlan=n
 CONFIG_PACKAGE_unzip=y
 CONFIG_PACKAGE_bash=y
 CONFIG_GRUB_BOOTOPTS="nomodeset"
-CONFIG_KERNEL_BUILD_USER="GaryPang"
+CONFIG_KERNEL_BUILD_USER="Grey"
